--- a/UPSTask.csproj
+++ b/UPSTask.csproj
@@ -12,9 +12,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Images\**" />
     <Compile Remove="UPSTask.Services\**" />
+    <EmbeddedResource Remove="Images\**" />
     <EmbeddedResource Remove="UPSTask.Services\**" />
+    <None Remove="Images\**" />
     <None Remove="UPSTask.Services\**" />
+    <Page Remove="Images\**" />
     <Page Remove="UPSTask.Services\**" />
   </ItemGroup>
 
@@ -34,10 +38,6 @@
     <PackageReference Include="Moq" Version="4.16.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Images\" />
   </ItemGroup>
 
   <ItemGroup>
